--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <section id="hero">
             <figure class="hero__background">
+                <img src="assets/sidecar-whaley.jpg" alt="Nutt Labs Sidecar">
                 <video src="assets/nutt-labs_bg.mp4" autoplay loop muted playsInline></video>
             </figure>
 
@@ -16,8 +17,8 @@
                 <figure class="hero__logo">
                     <img src="assets/nutt-labs_logo_dark.svg" alt="Nutt Labs">
                 </figure>
-                <h1>We help <strong>dynamic organizations</strong> <br>leverage <strong>modern digital tools</strong> <br>to <strong>supercharge their productivity</strong>.</h1>
-                <p>William Nutt is the leading mind at the convergence of <strong>systemization</strong>, <strong>automation</strong>, and <strong>AI</strong>. His strategic guidance pays dividends to hundreds of teams worldwide.</p>
+                <h1>We help <strong>dynamic organizations</strong> <br>leverage <strong>modern digital tools</strong> <br>to <strong>supercharge their performance</strong>.</h1>
+                <p>William Nutt is a leading expert at the convergence of <strong>systemization</strong>, <strong>automation</strong>, and <strong>AI</strong>. His strategic guidance pays dividends to hundreds of teams worldwide.</p>
                 <a class="button" href="https://form.nutt.ai/consulting" target="_blank"><span>Let's join forces →</span></a>
             </div>
         </section>
