--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
     <head>
 
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nutt Labs → Systemization × Automation × AI</title>
+        <meta name="description" content="We help dynamic teams leverage modern digital tools to supercharge their performance.">
+
+        <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
+        <property="og:image" content="assets/nutt-labs_og.png">
 
         <link rel="stylesheet" href="style.css">
 
@@ -157,8 +164,8 @@
                 <figure class="cta__logo">
                     <img src="assets/nutt-labs_logo_light.svg">
                 </figure>
-                <h1>Let's modernize your operation.</h1>
-                <a class="button"><span>Next steps →</span></a>
+                <h1>Let's modernize your operation to maximize your performance.</h1>
+                <a class="button" href="https://form.nutt.ai/consulting" target="_blank"><span>Next steps →</span></a>
             </div>
         </section>
     </body>
