--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="description" content="We help dynamic teams leverage modern digital tools to supercharge their performance.">
 
         <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
-        <property="og:image" content="/assets/nutt-labs_og.png">
+        <meta property="og:image" content="assets/nutt-labs_og.png">
 
         <link rel="stylesheet" href="style.css">
 
