--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
         <meta property="og:image" content="assets/nutt-labs_og.png">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css?v=0.001">
 
     </head>
     <body>
