--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nutt Labs :: Systemization × Automation × AI</title>
+        <title>Nutt Labs</title>
         <meta name="description" content="We help dynamic teams leverage modern digital tools to supercharge their performance.">
 
         <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
         <meta property="og:image" content="assets/nutt-labs_og.png">
 
-        <link rel="stylesheet" href="style.css?v=0.002">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
