--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <figure class="cta__logo">
                     <img src="assets/nutt-labs_logo_light.svg">
                 </figure>
-                <h1>Let's modernize your operation to maximize your performance.</h1>
+                <h1>Let's modernize your workflow to maximize your performance.</h1>
                 <a class="button" href="https://form.nutt.ai/consulting" target="_blank"><span>Next steps →</span></a>
             </div>
         </section>
