--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
         <meta name="image" property="og:image" content="https://nutt.ai/assets/nutt-labs_og.png">
 
-        <link rel="stylesheet" href="style.css?v=0.003">
+        <link rel="stylesheet" href="styles/style.css">
 
     </head>
     <body>
