--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nutt Labs</title>
-        <meta name="description" content="We hElp dynamic teams leverage modern digital tools to supercharge their performance.">
+        <meta name="description" content="We help dynamic teams leverage modern digital tools to supercharge their performance.">
 
         <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
         <meta name="image" property="og:image" content="https://nutt.ai/assets/nutt-labs_og.png">
