--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
         <title>Nutt Labs</title>
         <meta name="description" content="We help dynamic teams leverage modern digital tools to supercharge their performance.">
 
-        <link rel="icon" type="image/png" href="assets/nutt-labs_favicon.png">
-        <meta name="image" property="og:image" content="https://nutt.ai/assets/nutt-labs_og.png">
+        <link rel="icon" type="image/png" href="assets/meta/nutt-labs_favicon.png">
+        <meta name="image" property="og:image" content="https://nutt.ai/assets/meta/nutt-labs_og.png">
 
         <link rel="stylesheet" href="styles/style.css">
 
@@ -26,13 +26,13 @@
     <body>
         <section id="hero">
             <figure class="hero__background">
-                <img src="assets/sidecar-whaley.jpg" alt="Nutt Labs Sidecar">
-                <video src="assets/nutt-labs_bg.mp4" autoplay loop muted playsInline></video>
+                <img src="assets/backgrounds/sidecar-whaley.jpg" alt="Nutt Labs Sidecar">
+                <video src="assets/backgrounds/nutt-labs_bg.mp4" autoplay loop muted playsInline></video>
             </figure>
 
             <div class="container">
                 <figure class="hero__logo">
-                    <img src="assets/nutt-labs_logo_dark.svg" alt="Nutt Labs">
+                    <img src="assets/logos/nutt-labs_logo_dark.svg" alt="Nutt Labs">
                 </figure>
                 <h1>We help <strong>dynamic organizations</strong> <br>leverage <strong>modern digital tools</strong> <br>to <strong>supercharge their performance</strong>.</h1>
                 <p>William Nutt is a leading expert at the convergence of <strong>systemization</strong>, <strong>automation</strong>, and <strong>AI</strong>. His strategic guidance pays dividends to hundreds of teams worldwide.</p>
@@ -42,22 +42,22 @@
         <section id="insights">
             <div class="container">
                 <figure class="insights__title">
-                    <img src="assets/william-nutt-insights.svg" alt="William Nutt's Insights">
+                    <img src="assets/ad-hoc/william-nutt-insights.svg" alt="William Nutt's Insights">
                 </figure>
                 <ul clalss="insights__logos">
                     <li id="youTube">
                         <a href="https://youtube.com/williamnutt" target="_blank">
-                            <img src="assets/youtube.svg" alt="YouTube">
+                            <img src="assets/logos/youtube.svg" alt="YouTube">
                         </a>
                     </li>
                     <li id="proNex">
                         <a href="https://productivity.nexus" target="_blank">
-                            <img src="assets/productivity-nexus_logo.svg" alt="Productivity Nexus">
+                            <img src="assets/logos/productivity-nexus_logo.svg" alt="Productivity Nexus">
                         </a>
                     </li>
                     <li id="notionVip">
                         <a href="https://notion.vip" target="_blank">
-                            <img src="assets/notion-vip_logo.svg" alt="Notion VIP">
+                            <img src="assets/logos/notion-vip_logo.svg" alt="Notion VIP">
                         </a>
                     </li>
                 </ul>
@@ -168,10 +168,10 @@
         <section id="cta">
             <div class="container">
                 <figure class="cta__background">
-                    <img src="assets/stars.svg">
+                    <img src="assets/backgrounds/stars.svg">
                 </figure>
                 <figure class="cta__logo">
-                    <img src="assets/nutt-labs_logo_light.svg">
+                    <img src="assets/logos/nutt-labs_logo_light.svg">
                 </figure>
                 <h1>Let's modernize your workflow to maximize your performance.</h1>
                 <a class="button" href="https://form.nutt.ai/consulting" target="_blank"><span>Next steps →</span></a>
