--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -2,6 +2,133 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="assets/styles/style_ai-playbook.css">
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
     </head>
+    <body>
+
+        <header>
+            <figure class="header__logo">
+                <img src="assets/logos/nutt-labs_logo_eggshell.svg" alt="Nutt Labs">
+            </figure>
+        </header>
+
+        <section id="hero">
+
+            <div class="backgroundMedia">
+                <div class="backgroundMedia__backgroundPhoto"></div>
+                <video class="backgroundMedia__backgroundVideo" src="assets/backgrounds/nutt-labs_ai-playbook_ai-bg.mp4" autoplay loop muted playsinline disablepictureinpicture></video>
+            </div>
+
+            <div class="container">
+                <figure class="hero__icon">
+                    <img src="assets/logos/nutt-labs_ai-playbook_icon.svg" alt="AI Playbook">
+                </figure>
+                <h1>AI playbook.</h1>
+                <h3>Your clear path to <strong>boosting performance</strong> with AI.</h3>
+            </div>
+        </section>
+
+        <section id="pillars">
+            <div class="container">
+
+                <!-- Pillar 1 -->
+                <div class="pillar">
+                    <div class="pillar__header">
+                        <h2>
+                            <span class="pillar__number">01</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Learn essential skills.</span>
+                        </h2>
+                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
+                    </div>
+                    <div class="pillar__content">
+                        <p>A series of short tutorials introduces the <strong>fundamentals of AI</strong> in practical terms. With that foundational knowledge, you'll learn <strong>everyday strategies</strong> for harnessing AI in your workflow and gain <strong>tactical skills</strong> for getting the most from it.</p>
+                        <p>The lessons build on each other in a natural sequence:</p>
+                        <ol>
+                            <li>What is AI?</li>
+                            <li>General-Purpose vs. Specialized</li>
+                            <li>AI's Role in Your Workflow</li>
+                            <li>Chatbot Features—End-to-End</li>
+                            <li>Better Prompts for Better Responses</li>
+                            <li>Everyday Use Cases</li>
+                            <li>Customize Chatbots for Your Information, Style, and Context</li>
+                            <li>The Next Era: AI Agents</li>
+                        </ol>
+                        <p>Along the way, optional exercises make new concepts click and stick.
+                    </div>
+                </div>
+
+                <!-- Pillar 2 -->
+                <div class="pillar">
+                    <div class="pillar__header">
+                        <h2>
+                            <span class="pillar__number">02</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Adopt the right tools.</span>
+                        </h2>
+                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
+                    </div>
+                    <div class="pillar__content">
+                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. He'll walk you through the top tools and help you implement the best fits for your needs.</p><p>You'll have step-by-step documentation for when and how to use them. It'll be second nature in no time.</p>
+                    </div>
+                </div>
+
+                <!-- Pillar 3 -->
+                <div class="pillar">
+                    <div class="pillar__header">
+                        <h2>
+                            <span class="pillar__number">03</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Stay sharp.</span>
+                        </h2>
+                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
+                    </div>
+                    <div class="pillar__content">
+                        <p>Needless to say, AI is evolving quickly. Through recurring office hours, William will keep you up to speed on updates and opportunities you can't miss.</p>
+                        <p>And you'll have questions that emerge as you work with AI and want more out of it. Keep a list for Q&A with William during those office hours.</p>
+                        <p>You'll also use that time to identify new places for AI in your workflow—and the best tools for the job.</p>
+                    </div>
+                </div>
+
+            </div>  
+        </section>
+
+        <section id="coachNutt">
+
+            <div class="container">
+                <div class="coachNutt__headshot">
+                    <img src="assets/william-nutt/william-nutt_bw.jpeg" alt="William Nutt">
+                </div>
+
+                <div class="coachNutt__mainContent">
+                    <p><strong><a href="https://www.linkedin.com/in/williamnutt/" target="_blank">William Nutt</a></strong> guided the Notion community as it grew from a million users to more than 100 million. Through <a href="https://notion.vip">Notion VIP</a>, <a href="https://notion.vip/a-to-z">Notion A-to-Z</a>, and <a href="https://youtube.com/williamnutt">YouTube</a>, he has been the top Notion expert since the app's rebirth in 2018.</p>
+                    <blockquote class="ivanQuote">
+                        <p class="ivanQuote__quote">“William knows Notion as well as anyone<span style="white-space: nowrap">—and</span> teaches it like none other.”</p>
+                        <div class="ivanQuote__ivanInfo">
+                            <img src="assets/ad-hoc/ivan-zhao-notion.png" alt="Ivan Zhao">
+                            <p><strong>Ivan Zhao</strong>,<br>
+                            <em>Founder &amp; CEO, <a href="https://notion.so" target="_blank">Notion</a></em></p>
+                        </div>
+                    </blockquote>
+                    <p>As AI emerges with far greater impact, William remains in the driver's seat. He's the leading expert at the convergence of systemization, automation, and AI—his <a href="https://productivity.nexus">Productivity Nexus</a>.</p>
+                    <p>With the AI Playbook, he’s replicating his revolutionary approach to Notion education to help you cut through the noise and leverage the awesome power of AI to boost performance throughout your workflow.</p>
+                </div>
+
+                <div class="coachNutt__button">
+                    <a class="button" href="" targt="_blank">Request your invitation<span class="button__arrow">
+                        <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M27.7574 0.696721L32.5303 5.46969C32.8232 5.76258 32.8232 6.23746 32.5303 6.53035L27.7574 11.3033C27.4645 11.5962 26.9896 11.5962 26.6967 11.3033C26.4038 11.0104 26.4038 10.5356 26.6967 10.2427L30.1893 6.75002L0 6.75002V5.25002L30.1893 5.25002L26.6967 1.75738C26.4038 1.46449 26.4038 0.989614 26.6967 0.69672C26.9896 0.403827 27.4645 0.403827 27.7574 0.696721Z" fill="#000000"/>
+                        </svg>
+                    </span></a>
+                </div>
+            </div>
+
+        </section>
+
+        <footer>
+        </footer>
+
+        <script src="assets/scripts/ai-playbook.js"></script>
+
     </body>
 </html>
