--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -8,7 +8,7 @@
         <meta property="og:image" content="assets/meta/nutt-labs_og.png">
         <link rel="icon" href="assets/meta/nutt-labs_favicon.png">
 
-        <link rel="stylesheet" href="assets/styles/style_ai-playbook.css">
+        <link rel="stylesheet" href="assets/styles/style_ai-playbook.css?v=0.001">
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
