--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -27,7 +27,9 @@
         <section id="hero">
 
             <div class="backgroundMedia">
-                <div class="backgroundMedia__backgroundPhoto"></div>
+                <div class="backgroundMedia__backgroundPhoto">
+                    <img src="./assets/backgrounds/nutt-labs_ai-playbook_elephant.jpeg" alt="AI Playbook Elephant">
+                </div>
                 <video class="backgroundMedia__backgroundVideo" src="assets/backgrounds/nutt-labs_ai-playbook_ai-bg.mp4" autoplay loop muted playsinline disablepictureinpicture></video>
             </div>
 
@@ -36,7 +38,7 @@
                     <img src="assets/logos/nutt-labs_ai-playbook_icon.svg" alt="AI Playbook">
                 </figure>
                 <h1>AI playbook.</h1>
-                <h3>Your clear path to <strong>boosting performance</strong> with AI.</h3>
+                <h3>Your clear path to <strong>achieve more</strong> with AI.</h3>
             </div>
         </section>
 
@@ -72,12 +74,12 @@
                 <div class="pillar">
                     <div class="pillar__header">
                         <h2>
-                            <span class="pillar__number">02</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Adopt the right tools.</span>
+                            <span class="pillar__number">02</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Adopt and tailor tools.</span>
                         </h2>
                         <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
-                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. He'll walk you through the top tools and help you implement the best fits for your needs.</p><p>You'll have step-by-step documentation for when and how to use them. It'll be second nature in no time.</p>
+                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. Together, you'll identify, implement and customize the best fits for your needs.</p><p>For some, that means creating bespoke variants for your unique information, styles and workflow. That's when AI shines brightest.</p>
                     </div>
                 </div>
 
@@ -121,7 +123,7 @@
                 </div>
 
                 <div class="coachNutt__button">
-                    <a class="button" href="https://form.nutt.ai/ai-playbook-request" targt="_blank">Request your invitation<span class="button__arrow">
+                    <a class="button" href="https://form.nutt.ai/ai-playbook-request" target="_blank">Request your invitation<span class="button__arrow">
                         <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M27.7574 0.696721L32.5303 5.46969C32.8232 5.76258 32.8232 6.23746 32.5303 6.53035L27.7574 11.3033C27.4645 11.5962 26.9896 11.5962 26.6967 11.3033C26.4038 11.0104 26.4038 10.5356 26.6967 10.2427L30.1893 6.75002L0 6.75002V5.25002L30.1893 5.25002L26.6967 1.75738C26.4038 1.46449 26.4038 0.989614 26.6967 0.69672C26.9896 0.403827 27.4645 0.403827 27.7574 0.696721Z" fill="#000000"/>
                         </svg>
