--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <link rel="icon" type="image/png" href="assets/meta/nutt-labs_favicon.png">
         <meta name="image" property="og:image" content="https://nutt.ai/assets/meta/nutt-labs_og.png">
 
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="assets/styles/style.css">
 
     </head>
     <body>
