--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="coachNutt__button">
-                    <a class="button" href="https://form.nutt.ai/ai-playbook-request" target="_blank">Request your invitation<span class="button__arrow">
+                    <a class="button" href="https://form.nutt.ai/ai-playbook-request?src=nutt.ai/ai-playbook" target="_blank">Request your invitation<span class="button__arrow">
                         <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M27.7574 0.696721L32.5303 5.46969C32.8232 5.76258 32.8232 6.23746 32.5303 6.53035L27.7574 11.3033C27.4645 11.5962 26.9896 11.5962 26.6967 11.3033C26.4038 11.0104 26.4038 10.5356 26.6967 10.2427L30.1893 6.75002L0 6.75002V5.25002L30.1893 5.25002L26.6967 1.75738C26.4038 1.46449 26.4038 0.989614 26.6967 0.69672C26.9896 0.403827 27.4645 0.403827 27.7574 0.696721Z" fill="#000000"/>
                         </svg>
