--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -79,7 +79,7 @@
                         <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
-                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. Together, you'll identify, implement and customize the best fits for your needs.</p><p>For some, that means creating bespoke variants for your unique information, styles and workflow. That's when AI shines brightest.</p>
+                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. Together, you'll choose, implement and customize the best tools for your needs.</p><p>For some, that means creating bespoke variants for your unique information, styles and workflow. That's when AI shines brightest.</p>
                     </div>
                 </div>
 
@@ -94,7 +94,7 @@
                     <div class="pillar__content">
                         <p>Needless to say, AI is evolving quickly. Through recurring office hours, William will keep you up to speed on updates and opportunities you can't miss.</p>
                         <p>And you'll have questions that emerge as you work with AI and want more out of it. Keep a list for Q&A with William during those office hours.</p>
-                        <p>You'll also use that time to identify new places for AI in your workflow—and the best tools for the job.</p>
+                        <p>You'll also use those workshops to identify new opportunities for AI in your workflow, continuing the cycle of selecting, implementing and customizing the best tools for you.</p>
                     </div>
                 </div>
 
@@ -118,8 +118,8 @@
                             <em>Founder &amp; CEO, <a href="https://notion.so" target="_blank">Notion</a></em></p>
                         </div>
                     </blockquote>
-                    <p>As AI emerges with far greater impact, William remains in the driver's seat. He's the leading expert at the convergence of systemization, automation, and AI—his <a href="https://productivity.nexus">Productivity Nexus</a>.</p>
-                    <p>With the AI Playbook, he’s replicating his revolutionary approach to Notion education to help you cut through the noise and leverage the awesome power of AI to boost performance throughout your workflow.</p>
+                    <p>As AI explodes with far greater impact, William remains in the driver's seat. He's a vanguard at the intersection of systemization, automation, and AI—his <a href="https://productivity.nexus">Productivity Nexus</a>.</p>
+                    <p>With AI Playbook, he’s replicating his revolutionary approach to Notion education to help you harness AI and supercharge your performance.</p>
                 </div>
 
                 <div class="coachNutt__button">
