--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -54,7 +54,7 @@
                         <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
-                        <p>A series of short tutorials introduces the <strong>fundamentals of AI</strong> in practical terms. With that foundational knowledge, you'll learn <strong>everyday strategies</strong> for harnessing AI in your workflow and gain <strong>tactical skills</strong> for getting the most from it.</p>
+                        <p>Through a series of short tutorials, you'll firmly grasp the <strong>fundamentals of AI</strong>. With that foundational knowledge, you'll learn <strong>everyday strategies</strong> for harnessing AI in your workflow and gain <strong>tactical skills</strong> for using it most effectively.</p>
                         <p>The lessons build on each other in a natural sequence:</p>
                         <ol>
                             <li>What is AI?</li>
@@ -66,7 +66,7 @@
                             <li>Customize Chatbots for Your Information, Style, and Context</li>
                             <li>The Next Era: AI Agents</li>
                         </ol>
-                        <p>Along the way, optional exercises make new concepts click and stick.
+                        <p>Along the way, optional exercises make each new concept click and stick.
                     </div>
                 </div>
 
@@ -79,7 +79,7 @@
                         <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
-                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. Together, you'll choose, implement and customize the best tools for your needs.</p><p>For some, that means creating bespoke variants for your unique information, styles and workflow. That's when AI shines brightest.</p>
+                        <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. Together, you'll choose, implement, and customize the best tools for your needs.</p><p>For some, that means creating bespoke variants for your unique information, styles, and workflow. That's when AI shines brightest.</p>
                     </div>
                 </div>
 
