--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -5,7 +5,7 @@
 
         <title>AI Playbook from Nutt Labs</title>
         <meta name="description" content="Your game plan for boosting performance with AI." />
-        <meta property="og:image" content="assets/meta/ai-playbook_og.png">
+        <meta property="og:image" content="assets/meta/ai-playbook_og.jpg">
         <link rel="icon" href="assets/meta/nutt-labs_favicon.png">
 
         <link rel="stylesheet" href="assets/styles/style_ai-playbook.css?v=0.004">
