--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -64,6 +64,7 @@
                             <li>Better Prompts for Better Responses</li>
                             <li>Everyday Use Cases</li>
                             <li>Customize Chatbots for Your Information, Style, and Context</li>
+                            <li>Collaborate with AI: Canvases and Artifacts</li>
                             <li>The Next Era: AI Agents</li>
                         </ol>
                         <p>Along the way, optional exercises make each new concept click and stick.
