--- a/public/ai-playbook.html
+++ b/public/ai-playbook.html
@@ -38,7 +38,7 @@
                     <img src="assets/logos/nutt-labs_ai-playbook_icon.svg" alt="AI Playbook">
                 </figure>
                 <h1>AI playbook.</h1>
-                <h3>Your clear path to <strong>achieve more</strong> with AI.</h3>
+                <h3>Your guided path to <strong>AI empowerment</strong>.</h3>
             </div>
         </section>
 
@@ -49,7 +49,7 @@
                 <div class="pillar">
                     <div class="pillar__header">
                         <h2>
-                            <span class="pillar__number">01</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Learn essential skills.</span>
+                            <span class="pillar__number">01</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Master the fundamentals.</span>
                         </h2>
                         <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
                     </div>
@@ -75,7 +75,7 @@
                 <div class="pillar">
                     <div class="pillar__header">
                         <h2>
-                            <span class="pillar__number">02</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Adopt and tailor tools.</span>
+                            <span class="pillar__number">02</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Tailor your tools.</span>
                         </h2>
                         <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
                     </div>
