--- a/public/aiscend.html
+++ b/public/aiscend.html
@@ -3,12 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>AI Playbook from Nutt Labs</title>
-        <meta name="description" content="Your game plan for boosting performance with AI." />
-        <meta property="og:image" content="assets/meta/ai-playbook_og.jpg">
+        <title>AIscend from Nutt Labs</title>
+        <meta name="description" content="Your guided path to AI empowerment." />
+        <meta property="og:image" content="assets/meta/aiscend_og.jpg">
         <link rel="icon" href="assets/meta/nutt-labs_favicon.png">
 
-        <link rel="stylesheet" href="assets/styles/style_ai-playbook.css?v=0.004">
+        <link rel="stylesheet" href="assets/styles/style_aiscend.css?v=0.004">
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,16 +28,16 @@
 
             <div class="backgroundMedia">
                 <div class="backgroundMedia__backgroundPhoto">
-                    <img src="./assets/backgrounds/nutt-labs_ai-playbook_elephant.jpeg" alt="AI Playbook Elephant">
+                    <img src="./assets/backgrounds/nutt-labs_aiscend_elephant.jpeg" alt="AIscend Elephant">
                 </div>
-                <video class="backgroundMedia__backgroundVideo" src="assets/backgrounds/nutt-labs_ai-playbook_ai-bg.mp4" autoplay loop muted playsinline disablepictureinpicture></video>
+                <video class="backgroundMedia__backgroundVideo" src="assets/backgrounds/nutt-labs_aiscend_ai-bg.mp4" autoplay loop muted playsinline disablepictureinpicture></video>
             </div>
 
             <div class="container">
                 <figure class="hero__icon">
-                    <img src="assets/logos/nutt-labs_ai-playbook_icon.svg" alt="AI Playbook">
+                    <img src="assets/logos/nutt-labs_aiscend_icon.svg" alt="AIscend">
                 </figure>
-                <h1>AI playbook.</h1>
+                <h1>AIscend</h1>
                 <h3>Your guided path to <strong>AI empowerment</strong>.</h3>
             </div>
         </section>
@@ -51,7 +51,7 @@
                         <h2>
                             <span class="pillar__number">01</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Master the fundamentals.</span>
                         </h2>
-                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
+                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_aiscend_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
                         <p>Through a series of short tutorials, you'll firmly grasp the <strong>fundamentals of AI</strong>. With that foundational knowledge, you'll learn <strong>everyday strategies</strong> for harnessing AI in your workflow and gain <strong>tactical skills</strong> for using it most effectively.</p>
@@ -77,7 +77,7 @@
                         <h2>
                             <span class="pillar__number">02</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Tailor your tools.</span>
                         </h2>
-                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
+                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_aiscend_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
                         <p>Primed with the fundamentals, you'll work 1:1 with William to analyze your workflow and identify the top opportunities for AI. Together, you'll choose, implement, and customize the best tools for your needs.</p><p>For some, that means creating bespoke variants for your unique information, styles, and workflow. That's when AI shines brightest.</p>
@@ -90,7 +90,7 @@
                         <h2>
                             <span class="pillar__number">03</span> <span class="pillar__dash">–</span> <span class="pillar__mainTitle">Stay sharp.</span>
                         </h2>
-                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_ai-playbook_pillar-arrow.svg" alt="Arrow">
+                        <img class="pillar__arrow" src="assets/ad-hoc/nutt-labs_aiscend_pillar-arrow.svg" alt="Arrow">
                     </div>
                     <div class="pillar__content">
                         <p>Needless to say, AI is evolving quickly. Through recurring office hours, William will keep you up to speed on updates and opportunities you can't miss.</p>
@@ -120,7 +120,7 @@
                         </div>
                     </blockquote>
                     <p>As AI explodes with far greater impact, William remains in the driver's seat. He's a vanguard at the intersection of systemization, automation, and AI—his <a href="https://productivity.nexus">Productivity Nexus</a>.</p>
-                    <p>With AI Playbook, he’s replicating his revolutionary approach to Notion education to help you harness AI and supercharge your performance.</p>
+                    <p>With AIscend, he’s replicating his revolutionary approach to Notion education to help you harness AI and supercharge your performance.</p>
                 </div>
 
                 <div class="coachNutt__button">
@@ -137,7 +137,7 @@
         <footer>
         </footer>
 
-        <script src="assets/scripts/ai-playbook.js?v=0.001"></script>
+        <script src="assets/scripts/aiscend.js?v=0.001"></script>
 
     </body>
 </html>
